# Meta-project

./: Dockerfile  README.md  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml
api/: main.py
data/: easy.json  hard.json  medium.json
server/: app.py
